PLUT-183 tidy up the first two public plans: AddMixedNumbers and SimplifyArithmeticExpression
