# api/src/main/kotlin/server/api/PlanApiServiceImpl.kt
@@ -1,6 +1,6 @@
 package server.api
 
-import engine.context.emptyContext
+import engine.context.Context
 import engine.expressions.RootPath
 import engine.expressions.Subexpression
 import methods.methodRegistry
@@ -25,7 +25,8 @@ class PlanApiServiceImpl : PlansApiService {
         } catch (e: ParseCancellationException) {
             throw ResponseStatusException(HttpStatus.BAD_REQUEST, "Invalid expression", e)
         }
-        val trans = plan.tryExecute(emptyContext, Subexpression(RootPath, expr))
+        val context = Context(curriculum = applyPlanRequest.curriculum)
+        val trans = plan.tryExecute(context, Subexpression(RootPath, expr))
             ?: throw ResponseStatusException(HttpStatus.BAD_REQUEST, "Plan cannot be applied to expression")
         val modeller = TransformationModeller(format = applyPlanRequest.format)
         return modeller.modelTransformation(trans)
